# qbit-torrent-extract

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  main.py  prompt-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spec.md
.claude/plans/: wild-snuggling-boole.md
docker/: Dockerfile.qbittorrent  README.md  docker-compose.qbittorrent.yml
docs/: api.md  configuration.md  improvement-spec.md  installation.md  troubleshooting.md
src/qbit_torrent_extract/: __main__.py  config.py  extractor.py  logger.py  main.py  statistics.py  validator.py
tests/: test_config.py  test_extractor.py  test_integration.py  test_logger.py  test_main.py  test_performance.py  test_security.py  test_statistics.py  test_validator.py
